Fixing footer into two columns on mobile

--- a/web-app/css/fedu.css
+++ b/web-app/css/fedu.css
@@ -684,7 +684,7 @@ footer .footerbottomsection {
 
 .footerlink {
     color: #787878;
-    margin: 6px;
+    /* margin: 6px; */
 }
 
 /* footer .container{  */
